alignment fix

--- a/src/pages/home-vision.scss
+++ b/src/pages/home-vision.scss
@@ -1,7 +1,7 @@
 .vision-statement {
     display: grid;
-    grid-template-columns: 6fr 4fr;
-    margin-left:10px;
+    grid-template-columns: 7fr 3fr;
+    margin-top: 20px;
 
     h2.vision-text {
         font-size: 32px !important;
